--- a/new fail.html
+++ b/new fail.html
@@ -7,4 +7,7 @@
 
 <body>
     <h1>All reverse</h1>
+
+    <button class="btn btn-success" id="count-button" disabled="disabled">Посчитать</button>
+    <button class="btn btn-danger" id="reset-button" disabled="disabled">Очистить</button>
 </body>
